--- a/tech.html
+++ b/tech.html
@@ -22,6 +22,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/social-icons.css" media="screen,projection" />
 		<link rel="stylesheet" type="text/css" href="files/main_style.css" title="theme-css" />
 		<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" />
+		<link rel="stylesheet" href="assets/css/mobile.css" type="text/css" />
 
 		<style type='text/css'>
 			/* Base Typography */
@@ -112,6 +113,9 @@
 		<!-- Scripts -->
 		<script src='assets/js/jquery-1.8.3.min.js'></script>
 		<script src="assets/js/main.js"></script>
+		<script src="assets/js/mobile-nav.js"></script>
+		<script type="text/javascript" src="files/theme/plugins.js"></script>
+		<script type="text/javascript" src="files/theme/custom.js"></script>
 	</head>
 	<body class="header-page page-has-banner">
 		<div class="wrapper">
@@ -153,6 +157,28 @@
 					<div class="phone-number"></div>
 				</div>
 				<a class="hamburger" aria-label="Menu" href="#"><span></span></a>
+			</div>
+
+			<div class="navmobile-wrapper">
+				<div class="nav">
+					<ul class="wsite-menu-default">
+						<li class="wsite-menu-item">
+							<a href="index.html">About</a>
+						</li>
+						<li class="wsite-menu-item">
+							<a href="work.html">Work</a>
+						</li>
+						<li class="wsite-menu-item">
+							<a href="music.html">MUSIC</a>
+						</li>
+						<li class="wsite-menu-item">
+							<a href="tech.html">Tech</a>
+						</li>
+						<li class="wsite-menu-item">
+							<a href="https://drive.google.com/file/d/1oaGo4FWNIFjlzzBk9tgSiGnzDkzmeGMR/view?usp=sharing" target="_blank">CV</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 
 			<div class="banner-wrap">
@@ -229,9 +255,5 @@
 				</div>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="files/theme/mobile.js"></script>
-		<script type="text/javascript" src="files/theme/plugins.js"></script>
-		<script type="text/javascript" src="files/theme/custom.js"></script>
 	</body>
 </html>
