class naming consistency

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 						</div>
 						<div class="nav desktop-nav">
 							<ul class="menu-default">
-								<li id="active" class="menu-item-wrap">
+								<li id="nav-about" class="menu-item-wrap">
 									<a href="index.html" class="menu-item">About</a>
 								</li>
 								<li id="pg888176317147018417" class="menu-item-wrap">
 									<a href="work.html" class="menu-item">Work</a>
 								</li>
-								<li id="pg215549212564001219" class="menu-item-wrap">
+								<li id="nav-music" class="menu-item-wrap">
 									<a href="music.html" class="menu-item">MUSIC</a>
 								</li>
-								<li id="pg558200931783650107" class="menu-item-wrap">
+								<li id="nav-tech" class="menu-item-wrap">
 									<a href="tech.html" class="menu-item">Tech</a>
 								</li>
 								<li id="pg887775431257818371" class="menu-item-wrap">
@@ -166,14 +166,14 @@
 			</div>
 
 			<div class="banner-wrap">
-				<div class="header-elements">
-					<div class="section-wrap">
-						<div class="section header-section">
-							<div class="section-content">
+				<div class="wsite-header-elements">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-header-section">
+							<div class="wsite-section-content">
 								<div class="container">
 									<div class="banner">
-										<div class="section-elements">
-											<h2 class="content-title">ABOUT ME<br></h2>
+										<div class="wsite-section-elements">
+											<h2 class="wsite-content-title">ABOUT ME<br></h2>
 										</div>
 									</div>
 								</div>
@@ -184,9 +184,9 @@
 			</div>
 
 			<div class="main-wrap">
-				<div id="wsite-content" class="wsite-elements wsite-not-footer">
+				<div id="wsite-content" class="wsite-content">
 					<div class="wsite-section-wrap">
-						<div class="wsite-section wsite-body-section wsite-background-2 wsite-custom-background"  >
+						<div class="wsite-section wsite-body-section wsite-background-2">
 							<div class="wsite-section-content">
 								<div class="container">
 									<div class="wsite-section-elements">
@@ -276,5 +276,25 @@
 	<!-- <script type="text/javascript" src="files/theme/files/mobile.js"></script> -->
 	<!-- <script type="text/javascript" src="files/theme/plugins.js"></script> -->
 	<!-- <script type="text/javascript" src="files/theme/custom.js"></script> -->
+
+	<style>
+		@media screen and (min-width: 767px) {
+			.paragraph, p {
+				font-size: 20px !important;
+				line-height: 33px !important;
+			}
+			.site-title {
+				font-size: 36px !important;
+			}
+			.menu-default a {
+				font-size: 15px !important;
+			}
+			blockquote {
+				font-size: 15px !important;
+			}
+		}
+	</style>
+
+	<div class="wsite-spacer" style="height:50px;"></div>
 </body>
 </html>
