--- a/music.html
+++ b/music.html
@@ -182,14 +182,14 @@
 			</div>
 
 			<div class="banner-wrap">
-				<div class="header-elements">
-					<div class="section-wrap">
-						<div class="section header-section">
-							<div class="section-content">
+				<div class="wsite-header-elements">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-header-section">
+							<div class="wsite-section-content">
 								<div class="container">
 									<div class="banner">
-										<div class="section-elements">
-											<h2 class="content-title">MUSIC<br></h2>
+										<div class="wsite-section-elements">
+											<h2 class="wsite-content-title">MUSIC<br></h2>
 										</div>
 									</div>
 								</div>
@@ -200,18 +200,18 @@
 			</div>
 
 			<div class="main-wrap">
-				<div class="content">
-					<div class="section-wrap">
-						<div class="section body-section background-6 custom-background">
-							<div class="section-content">
+				<div class="wsite-content">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-body-section wsite-background-2">
+							<div class="wsite-section-content">
 								<div class="container">
-									<div class="section-elements">
-										<h2 class="content-title" style="text-align:center;">Original Music</h2>
+									<div class="wsite-section-elements">
+										<h2 class="wsite-content-title" style="text-align:center;">Original Music</h2>
 										<div class="paragraph" style="text-align:center;">
 											Composed under the moniker 'Barasingha' and released on international labels as well as independently on <a href="https://barasingha.bandcamp.com" target="_blank">Bandcamp</a><br />
 										</div>
-										<div class="multicol">
-											<div class="multicol-table-wrap" style="margin:0 -15px;">
+										<div class="wsite-multicol">
+											<div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
 												<table class="wsite-multicol-table">
 													<tbody class="wsite-multicol-tbody">
 														<tr class="wsite-multicol-tr">
