--- a/tech.html
+++ b/tech.html
@@ -182,14 +182,14 @@
 			</div>
 
 			<div class="banner-wrap">
-				<div class="header-elements">
-					<div class="section-wrap">
-						<div class="section header-section">
-							<div class="section-content">
+				<div class="wsite-header-elements">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-header-section">
+							<div class="wsite-section-content">
 								<div class="container">
 									<div class="banner">
-										<div class="section-elements">
-											<h2 class="content-title" style="text-align:center;">ACADEMIC &amp; TECH</h2>
+										<div class="wsite-section-elements">
+											<h2 class="wsite-content-title" style="text-align:center;">ACADEMIC &amp; TECH</h2>
 										</div>
 									</div>
 								</div>
@@ -200,13 +200,13 @@
 			</div>
 
 			<div class="main-wrap">
-				<div class="content">
-					<div class="section-wrap">
-						<div class="section body-section background-9 custom-background">
-							<div class="section-content">
+				<div class="wsite-content">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-body-section wsite-background-2">
+							<div class="wsite-section-content">
 								<div class="container">
-									<div class="section-elements">
-										<h2 class="content-title" style="text-align:center;">PUBLICATIONS<br></h2>
+									<div class="wsite-section-elements">
+										<h2 class="wsite-content-title" style="text-align:center;">PUBLICATIONS<br></h2>
 										<div class="paragraph" style="text-align:center;">
 											<strong>M.Phil (Music Composition) Thesis - Trinity College Dublin - 2018-2019</strong><br />
 											<u><em><a href="https://www.researchgate.net/publication/351346488_Exploring_Carnatic_Classical_Music_in_Drum_Bass_Towards_a_New_Sound_of_the_Asian_Underground" target="_blank"><font color="#818181">Exploring Carnatic Classical Music in Drum &amp; Bass : Towards a New Sound of the Asian Underground</font></a></em></u>
@@ -218,7 +218,7 @@
 										<div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
 										<hr class="styled-hr" style="width:100%;"></hr>
 										<div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
-										<h2 class="content-title" style="text-align:center;">PRESENTATIONS</h2>
+										<h2 class="wsite-content-title" style="text-align:center;">PRESENTATIONS</h2>
 										<div class="paragraph" style="text-align:center;"><strong>ADCx India 2025</strong></div>
 										<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 										<a href='https://www.youtube.com/live/vXU_HwonHq0?si=U3Nw-m6939i1o_h0&t=10561' target='_blank'>
@@ -229,7 +229,7 @@
 										<div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
 										<hr class="styled-hr" style="width:100%;"></hr>
 										<div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
-										<h2 class="content-title" style="text-align:center;">MAX FOR LIVE DEVICES<br></h2>
+										<h2 class="wsite-content-title" style="text-align:center;">MAX FOR LIVE DEVICES<br></h2>
 										<div class="paragraph" style="text-align:center;">Max/MSP utility devices for Ableton Live available on the Max for Live forums<br /></div>
 										<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 										<a href='https://maxforlive.com/profile/user/sat1269' target='_blank'>
@@ -240,7 +240,7 @@
 										<div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
 										<hr class="styled-hr" style="width:100%;"></hr>
 										<div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
-										<h2 class="content-title" style="text-align:center;">GITHUB</h2>
+										<h2 class="wsite-content-title" style="text-align:center;">GITHUB</h2>
 										<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 										<a href='https://github.com/satyajeetprabhu/' target='_blank'>
 										<img src="assets/images/octicons-mark-github-svg_orig.png" alt="GitHub Profile" style="width:auto;max-width:100%" />
