--- a/work.html
+++ b/work.html
@@ -182,14 +182,14 @@
 			</div>
 
 			<div class="banner-wrap">
-				<div class="header-elements">
-					<div class="section-wrap">
-						<div class="section header-section">
-							<div class="section-content">
+				<div class="wsite-header-elements">
+					<div class="wsite-section-wrap">
+						<div class="wsite-section wsite-header-section">
+							<div class="wsite-section-content">
 								<div class="container">
 									<div class="banner">
-										<div class="section-elements">
-											<h2 class="content-title" style="text-align:center;">WORK</h2>
+										<div class="wsite-section-elements">
+											<h2 class="wsite-content-title" style="text-align:center;">WORK</h2>
 										</div>
 									</div>
 								</div>
