added UPF thesis link

--- a/tech.html
+++ b/tech.html
@@ -67,10 +67,10 @@
                     </div>
                 </div>
                 <div class="tech-item publication-item">
-                    <h3>M.Phil (Music Composition) Thesis - Trinity College Dublin - 2018-2019</h3>
+                    <h3>Thesis - Master in Sound and Music Computing <br> Universitat Pompeu Fabra, Barcelona - 2023-2025</h3>
                     <div class="tech-description">
-                        <a href="https://www.researchgate.net/publication/351346488_Exploring_Carnatic_Classical_Music_in_Drum_Bass_Towards_a_New_Sound_of_the_Asian_Underground" target="_blank" rel="noopener noreferrer">
-                            Exploring Carnatic Classical Music in Drum & Bass : Towards a New Sound of the Asian Underground
+                        <a href="https://arxiv.org/abs/2509.11241" target="_blank" rel="noopener noreferrer">
+                            Revisiting Meter Tracking in Carnatic Music using Deep Learning Approaches
                         </a>
                     </div>
                 </div>
