updated landing page text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <p>I am <span class="large">Satya</span> from <span class="large">Mumbai, India</span></p>
                         <p class="skills">| Music Technology | Music Composition | Music Research |</p>
 
-                        <p>I'm studying <span class="large">Sound and Music Computation</span> at UPF, Barcelona</p>
+                        <p>I studied <span class="large">Sound and Music Computation</span> at UPF, Barcelona</p>
                         <p class="skills">| Python | Machine Learning | Audio Signal Processing |</p>
 
                         <p>I received my <span class="large">M.Phil in Music Composition</span> from Trinity College, Dublin</p>
