--- a/tech.html
+++ b/tech.html
@@ -59,6 +59,14 @@
             <section class="tech-section" aria-labelledby="publications-heading">
                 <h2 id="publications-heading" class="tech-title">Publications</h2>
                 <div class="tech-item publication-item">
+                    <h3>International Computer Music Conference (ICMC) 2025</h3>
+                    <div class="tech-description">
+                        <a href="https://repositori.upf.edu/items/50a67dd2-6d94-4600-9b90-c2c09a6eda29" target="_blank" rel="noopener noreferrer">
+                            Learning microrhythm in Uruguayan Candombe using transformers
+                        </a>
+                    </div>
+                </div>
+                <div class="tech-item publication-item">
                     <h3>ISMIR 2024 Late Breaking Demo</h3>
                     <div class="tech-description">
                         <a href="https://ismir2024program.ismir.net/lbd_428.html" target="_blank" rel="noopener noreferrer">
@@ -69,7 +77,7 @@
                 <div class="tech-item publication-item">
                     <h3>Thesis - Master in Sound and Music Computing <br> Universitat Pompeu Fabra, Barcelona - 2023-2025</h3>
                     <div class="tech-description">
-                        <a href="https://arxiv.org/abs/2509.11241" target="_blank" rel="noopener noreferrer">
+                        <a href="https://zenodo.org/records/17304733" target="_blank" rel="noopener noreferrer">
                             Revisiting Meter Tracking in Carnatic Music using Deep Learning Approaches
                         </a>
                     </div>
